--- a/frontend/frontend/src/app/main/order-details/order-details.component.html
+++ b/frontend/frontend/src/app/main/order-details/order-details.component.html
@@ -5,6 +5,8 @@
     <p> Videocard: {{order?.videocard}} </p>
     <p> Ram Memory (GB): {{order?.rammemory}}  </p>
     <p> Ram Memory (GB): {{order?.rammemory2}}  </p>
+    <p> Ram Memory (GB): {{order?.rammemory3}}  </p>
+    <p> Ram Memory (GB): {{order?.rammemory4}}  </p>
     
     <button onclick="window.location.href ='http://localhost:4200/products';"> Products Details</button>
     
